[package]
name = "realworld-warp"
version = "0.1.0"
authors = ["formoon <andrewwang@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.0", features = ["compression"]}
futures = { version = "0.3.*" }
tokio = {version = "1.0", features = ["full"] }
# bytes version must same as [warp] source code
bytes = "1.0"

diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
# postgres = "0.19"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }

dotenv = "0.15.0"
chrono = {version = "0.4", features = ["serde"]}
slug = "0.1.2"
rand = "0.6.3"
bcrypt = "0.9.0"
frank_jwt = "3.1.2"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
structopt = { version = "0.3", default-features = false }
uuid = { version = "0.8", features = ["v4"] }

[features]
default = ["random-suffix"]

random-suffix = []
